--- a/about.html
+++ b/about.html
@@ -18,7 +18,79 @@
   </header>
 
   <main>
+    <h1>Jasper Cussac</h1>
+    <div class="about_text">
+      <p>I was born in Paris, France, in the 15th arrondissement in 1998, from a French father and an American mother. Soon after my birth, I moved to a suburb southwest of the French capital. I grew up submerged in the French culture and language until I relocated to the United States for ninth grade, at the age of fifteen. I moved to the capital, Washington D.C., and began attending the French International School of Washington D.C. While I still had the chance to keep experiencing the     French culture and speaking the French language every day, I also got to discover the American culture more profoundly.</p>
+      <p>Because of my step-father's influence as an artist, I have possessed a natural affinity for the arts since my early youth. Throughout my childhood and adolescence, I have explored various fields of visual design. I also picked up the guitar along the way. When it came time to orient my area of collegiate studies, I looked towards design.</P>
+      <p>After I finished high-school, I first attended a small university in Pittsburgh, PA, called Chatham University where I studied Graphic Design. Then, I transferred to Drexel University in Philadelphia, PA, where I currently reside. Though I originally had been accepted into the Graphic Design program, I switched to Interactive Digital Media before starting to attend. This program offered the opportunity to continue applying to design to the visual world around us, while simultaneously developing strong skills in an industry that is greatly relevant in our current and future society.</p>
+      <p> Over my relatively short lifespan, I have been offered many chances to travel. The people I grew up around placed a deep importance on it, for which I am truly grateful. It has enlightened me on various extremely diverse cultures and languages. In my work, I draw inspiration from around the world, exploring many different styles of design from diverse cultures.</p>
+    </div>
 
+    <!-- Resume starts here-->
+    <div class="about_text" id="resume_text">
+      <h2> EDUCATION </h2>
+      <dl>
+        <dt> Bachelor of Media Arts, with a concentration in Graphic Design - Expected May 2019 </dt>
+          <dd> Chatham University </dd> <br>
+        <dt> Bachelor of Science, with a concentration in Interactive Digital Media - Expected June 2020 </dt>
+          <dd> Drexel University </dd> <br>
+        <dt> High School Diploma - June 2015 </dt>
+          <dd> French International School of Washington D.C. </dd>
+      </dl>
+
+      <h2> HONORS </h2>
+      <ul>
+        <li> Dean’s List: 4 semesters </li>
+        <li> College of Media Arts and Design merit scholarship - 2015-2017 </li>
+        <li> Portfolio scholarship - September 2016-2017 </li>
+        <li> French Baccalaureate </li>
+        <li> French National Diplomat of the Brevet </li>
+        <li> Merit in Spanish </li>
+        <li> Winner of school wide photography contest with the theme: life </li>
+      </ul>
+
+      <h2> EXPERIENCE </h2>
+      <dl>
+        <dt> Gaby et Jules - April 2016-August 2016 </dt>
+          <dd> Location: Pittsburgh </dd>
+          <dd> Sales assistant </dd>
+          <dd> Managed cash register </dd>
+          <dd> Took orders from customers </dd>
+          <dd> Organized produce and aesthetic display </dd>
+<br>
+        <dt> The French Touch, Fine Landscaping and Home Renovation - June 2016, June 2017 </dt>
+          <dd> Location: Pittsburgh </dd>
+          <dd> Did basic garden work maintaining customer’s yards </dd>
+          <dd> Landscaped with a concern for aesthetic </dd>
+<br>
+        <dt> Research project, Thesis on the ethics of the use of technology in sports - September 2014-Febuary 2015 </dt>
+          <dd> Location: French International School
+          <dd> Conducted two experiments: one to show the effect of different swim suits on speed, the other to study the effect of training technology
+          <dd> Presented the thesis in both oral and written form
+          <dd> Designed a website to present the thesis
+      </dl>
+
+      <h2> SKILLS </h2>
+      <dl>
+        <dt> Computer </dt>
+          <dd> Windows and Mac </dd>
+          <dd> Strong knowledge in Adobe Photoshop, Adobe Illustrator, Adobe AfterEffects, Microsoft Word, Microsoft Excel, and Microsoft PowerPoint </dd>
+          <dd> Proficiency in HTML and CSS </dd>
+          <dd> Basic knowledge in JavaScript </dd>
+<br>
+        <dt> Languages </dt>
+          <dd> Fluent in French and English </dd>
+          <dd> Proficiency in Spanish </dd>
+          <dd> Basic skills in German </dd>
+      </dl>
+
+      <h2> LEADERSHIP AND ACTIVITIES </h2>
+      <dl>
+        <dt> Soccer - 2008-2015 </dt>
+          <dd> Division 1 of Montgomery Soccer Corporation - 2012-2015 </dd>
+      </dl>
+    </div>
+    <!-- Resume ends here -->
   </main>
 
   <footer>
