Wednesday, February 14th

--- a/about.html
+++ b/about.html
@@ -8,13 +8,15 @@
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li> Portfolio </li>
-        <li> About </li>
-        <li> Contact </li>
-      </ul>
-    </nav>
+    <div class="header_navigation">
+      <nav>
+        <ul>
+          <li> Portfolio </li>
+          <li> About </li>
+          <li> Contact </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -94,13 +96,15 @@
   </main>
 
   <footer>
-    <nav>
-      <ul>
-        <li> Portfolio </li>
-        <li> About </li>
-        <li> Contact </li>
-      </ul>
-    </nav>
+    <div class="navigation_footer">
+      <nav>
+        <ul>
+          <li> Portfolio </li>
+          <li> About </li>
+          <li> Contact </li>
+        </ul>
+      </nav>
+    </div>
   </footer>
 </body>
 
