--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <!-- <meta name="viewport" content=""> -->
-    <title> Home </title>
+    <title> Jasper Cussac </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
