new commit, Wednesday February 28

--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,26 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title> Home </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
+
 <body>
-  <header>
-    <div class="navigation_header">
-      <nav>
-        <ul>
-          <li> Portfolio </li>
-          <li> About </li>
-          <li> Contact </li>
-        </ul>
-      </nav>
+<!-- Navigation starts here -->
+<header>
+  <div class="navigation_header">
+    <div class="logo">
+      <p class="j_logo"> J </p>
     </div>
-  </header>
+    <div class="links">
+      <a href="portfolio.html">PORTFOLIO</a>
+      <a href="about.html">ABOUT</a>
+      <a href="contact.html">CONTACT</a>
+    </div>
+</header>
+<!-- Navigation ends here -->
 
   <main>
 
