--- a/index.html
+++ b/index.html
@@ -7,30 +7,24 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
+
 <body>
-  <header>
+<header>
+  <div class="navigation_header">
     <nav>
-      <ul>
-        <li> Portfolio </li>
-        <li> About </li>
-        <li> Contact </li>
-      </ul>
+        <p class="j_logo"> J </p>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
-  </header>
+  </div>
+</header>
 
-  <main>
 
-  </main>
+<main>
 
-  <footer>
-    <nav>
-      <ul>
-        <li> Portfolio </li>
-        <li> About </li>
-        <li> Contact </li>
-      </ul>
-    </nav>
-  </footer>
+
+</main>
 </body>
 
 </html>
