--- a/about.html
+++ b/about.html
@@ -2,63 +2,72 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title> Home </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title> About </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
-<body>
-  <header>
-    <div class="header_navigation">
-      <nav>
-        <ul>
-          <li> Portfolio </li>
-          <li> About </li>
-          <li> Contact </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <h1>Jasper Cussac</h1>
-    <div class="about_text">
+<body>
+<!-- Navigation starts here -->
+<header>
+  <div class="navigation_header">
+    <div class="logo">
+      <p class="j_logo"> J </p>
+    </div>
+    <div class="links">
+      <a href="portfolio.html">PORTFOLIO</a>
+      <a href="about.html">ABOUT</a>
+      <a href="contact.html">CONTACT</a>
+    </div>
+</header>
+<!-- Navigation ends here -->
+
+<main>
+  <div id="about">
+    <div id="jasper_image">
+      <img src="" alt="Jasper Cussac">
+    </div>
+    <div id="about_bio">
+      <h1>Jasper Cussac</h1>
       <p>I was born in Paris, France, in the 15th arrondissement in 1998, from a French father and an American mother. Soon after my birth, I moved to a suburb southwest of the French capital. I grew up submerged in the French culture and language until I relocated to the United States for ninth grade, at the age of fifteen. I moved to the capital, Washington D.C., and began attending the French International School of Washington D.C. While I still had the chance to keep experiencing the     French culture and speaking the French language every day, I also got to discover the American culture more profoundly.</p>
       <p>Because of my step-father's influence as an artist, I have possessed a natural affinity for the arts since my early youth. Throughout my childhood and adolescence, I have explored various fields of visual design. I also picked up the guitar along the way. When it came time to orient my area of collegiate studies, I looked towards design.</P>
       <p>After I finished high-school, I first attended a small university in Pittsburgh, PA, called Chatham University where I studied Graphic Design. Then, I transferred to Drexel University in Philadelphia, PA, where I currently reside. Though I originally had been accepted into the Graphic Design program, I switched to Interactive Digital Media before starting to attend. This program offered the opportunity to continue applying to design to the visual world around us, while simultaneously developing strong skills in an industry that is greatly relevant in our current and future society.</p>
       <p> Over my relatively short lifespan, I have been offered many chances to travel. The people I grew up around placed a deep importance on it, for which I am truly grateful. It has enlightened me on various extremely diverse cultures and languages. In my work, I draw inspiration from around the world, exploring many different styles of design from diverse cultures.</p>
     </div>
+  </div>
 
-    <!-- Resume starts here-->
-    <div class="about_text" id="resume_text">
-      <h2> EDUCATION </h2>
-      <dl>
-        <dt> Bachelor of Media Arts, with a concentration in Graphic Design - Expected May 2019 </dt>
-          <dd> Chatham University </dd> <br>
-        <dt> Bachelor of Science, with a concentration in Interactive Digital Media - Expected June 2020 </dt>
-          <dd> Drexel University </dd> <br>
-        <dt> High School Diploma - June 2015 </dt>
-          <dd> French International School of Washington D.C. </dd>
-      </dl>
+<!-- Resume starts here
+  <div class="about_text" id="resume_text">
+    <h2> EDUCATION </h2>
+    <dl>
+      <dt> Bachelor of Media Arts, with a concentration in Graphic Design - Expected May 2019 </dt>
+        <dd> Chatham University </dd> <br>
+      <dt> Bachelor of Science, with a concentration in Interactive Digital Media - Expected June 2020 </dt>
+        <dd> Drexel University </dd> <br>
+      <dt> High School Diploma - June 2015 </dt>
+        <dd> French International School of Washington D.C. </dd>
+    </dl>
 
-      <h2> HONORS </h2>
-      <ul>
-        <li> Dean’s List: 4 semesters </li>
+    <h2> HONORS </h2>
+    <ul>
+      <li> Dean’s List: 4 semesters </li>
         <li> College of Media Arts and Design merit scholarship - 2015-2017 </li>
         <li> Portfolio scholarship - September 2016-2017 </li>
         <li> French Baccalaureate </li>
         <li> French National Diplomat of the Brevet </li>
         <li> Merit in Spanish </li>
         <li> Winner of school wide photography contest with the theme: life </li>
-      </ul>
+    </ul>
 
-      <h2> EXPERIENCE </h2>
+    <h2> EXPERIENCE </h2>
       <dl>
         <dt> Gaby et Jules - April 2016-August 2016 </dt>
-          <dd> Location: Pittsburgh </dd>
-          <dd> Sales assistant </dd>
-          <dd> Managed cash register </dd>
-          <dd> Took orders from customers </dd>
-          <dd> Organized produce and aesthetic display </dd>
+        <dd> Location: Pittsburgh </dd>
+        <dd> Sales assistant </dd>
+        <dd> Managed cash register </dd>
+        <dd> Took orders from customers </dd>
+        <dd> Organized produce and aesthetic display </dd>
 <br>
         <dt> The French Touch, Fine Landscaping and Home Renovation - June 2016, June 2017 </dt>
           <dd> Location: Pittsburgh </dd>
@@ -92,20 +101,24 @@
           <dd> Division 1 of Montgomery Soccer Corporation - 2012-2015 </dd>
       </dl>
     </div>
-    <!-- Resume ends here -->
-  </main>
+Resume ends here -->
+</main>
 
-  <footer>
-    <div class="navigation_footer">
-      <nav>
-        <ul>
-          <li> Portfolio </li>
-          <li> About </li>
-          <li> Contact </li>
-        </ul>
-      </nav>
+<footer>
+<!-- footer starts here -->
+  <div class="footer">
+    <div class="footer_logo">
+      <h1>JasperCussac</h1>
+      <p>jasper.cussac@gmail.com</p>
     </div>
-  </footer>
+    <div class="navigation_footer">
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT</a>
+    </div>
+</div>
+<!-- footer ends here -->
+</footer>
 </body>
 
 </html>
