--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 
 
 <body>
-<!-- Navigation starts here -->
 <header>
+<!-- Navigation starts here -->
   <div class="navigation_header">
     <div class="logo">
       <p class="j_logo"> J </p>
@@ -20,24 +20,30 @@
       <a href="about.html">ABOUT</a>
       <a href="contact.html">CONTACT</a>
     </div>
-</header>
 <!-- Navigation ends here -->
+</header>
 
-  <main>
+<main>
+  <h1>Jasper Cussac</h1>
+    
+  </form>
+</main>
 
-  </main>
-
-  <footer>
+<footer>
+<!-- footer starts here -->
+  <div class="footer">
+    <div class="footer_logo">
+      <h1>JasperCussac</h1>
+      <p>jasper.cussac@gmail.com</p>
+    </div>
     <div class="navigation_footer">
-      <nav>
-        <ul>
-          <li> Portfolio </li>
-          <li> About </li>
-          <li> Contact </li>
-        </ul>
-      </nav>
-    <div>
-  </footer>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT</a>
+    </div>
+</div>
+<!-- footer ends here -->
+</footer>
 </body>
 
 </html>
