Progress, Sunday March 12

--- a/about.html
+++ b/about.html
@@ -9,34 +9,33 @@
 
 
 <body>
-<!-- Navigation starts here -->
 <header>
-  <div class="navigation_header">
+<!-- Navigation starts here -->
+  <div class="navigationHeader" class="navo">
     <div class="logo">
       <p class="j_logo"> J </p>
     </div>
     <div class="links">
-      <a href="portfolio.html">PORTFOLIO</a>
-      <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
-    </div>
-</header>
-<!-- Navigation ends here -->
-
-<main>
-  <div id="about">
-    <div id="jasper_image">
-      <img src="" alt="Jasper Cussac">
-    </div>
-    <div id="about_bio">
-      <h1>Jasper Cussac</h1>
-      <p>I was born in Paris, France, in the 15th arrondissement in 1998, from a French father and an American mother. Soon after my birth, I moved to a suburb southwest of the French capital. I grew up submerged in the French culture and language until I relocated to the United States for ninth grade, at the age of fifteen. I moved to the capital, Washington D.C., and began attending the French International School of Washington D.C. While I still had the chance to keep experiencing the     French culture and speaking the French language every day, I also got to discover the American culture more profoundly.</p>
-      <p>Because of my step-father's influence as an artist, I have possessed a natural affinity for the arts since my early youth. Throughout my childhood and adolescence, I have explored various fields of visual design. I also picked up the guitar along the way. When it came time to orient my area of collegiate studies, I looked towards design.</P>
-      <p>After I finished high-school, I first attended a small university in Pittsburgh, PA, called Chatham University where I studied Graphic Design. Then, I transferred to Drexel University in Philadelphia, PA, where I currently reside. Though I originally had been accepted into the Graphic Design program, I switched to Interactive Digital Media before starting to attend. This program offered the opportunity to continue applying to design to the visual world around us, while simultaneously developing strong skills in an industry that is greatly relevant in our current and future society.</p>
-      <p> Over my relatively short lifespan, I have been offered many chances to travel. The people I grew up around placed a deep importance on it, for which I am truly grateful. It has enlightened me on various extremely diverse cultures and languages. In my work, I draw inspiration from around the world, exploring many different styles of design from diverse cultures.</p>
+      <ul>
+        <li><a href="index.html">PORTFOLIO</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
     </div>
   </div>
+<!-- Navigation ends here -->
+</header>
 
+<main>
+  <div class="wrapper">
+    <div id="aboutImages">
+      <img srcset="assets/jasper_wide.jpg 960px, assets/jasper_tablet.jpg 768px, assets/jasper_mobile 640px" src="assets/jasper.jpg" alt="Jasper Cussac">
+    </div>
+    <div id="aboutText">
+      <h1>Jasper Cussac</h1>
+      <p>I was born in Paris, France, in the 15th arrondissement in 1998, from a French father and an American mother. Soon after my birth, I moved to a suburb southwest of the French capital. I grew up submerged in the French culture and language until I relocated to the United States for ninth grade, at the age of fifteen. I moved to the capital, Washington D.C., and began attending the French International School of Washington D.C. While I still had the chance to keep experiencing the     French culture and speaking the French language every day, I also got to discover the American culture more profoundly.<br><br>Because of my step-father's influence as an artist, I have possessed a natural affinity for the arts since my early youth. Throughout my childhood and adolescence, I have explored various fields of visual design. I also picked up the guitar along the way. When it came time to orient my area of collegiate studies, I looked towards design.<br><br>After I finished high-school, I first attended a small university in Pittsburgh, PA, called Chatham University where I studied Graphic Design.Then, I transferred to Drexel University in Philadelphia, PA, where I currently reside. Though I originally had been accepted into the Graphic Design program, I switched to Interactive Digital Media before starting to attend. This program offered the opportunity to continue applying to design to the visual world around us, while simultaneously developing strong skills in an industry that is greatly relevant in our current and future society.Over my relatively short lifespan, I have been offered many chances to travel. The people I grew up around placed a deep importance on it, for which I am truly grateful. It has enlightened me on various extremely diverse cultures and languages. In my work, I draw inspiration from around the world, exploring many different styles of design from diverse cultures.</p>
+    </div>
+  </div>
 <!-- Resume starts here
   <div class="about_text" id="resume_text">
     <h2> EDUCATION </h2>
@@ -107,16 +106,18 @@ Resume ends here -->
 <footer>
 <!-- footer starts here -->
   <div class="footer">
-    <div class="footer_logo">
-      <h1>JasperCussac</h1>
+    <div class="footerTop">
+      <h2>Jasper Cussac</h2>
       <p>jasper.cussac@gmail.com</p>
     </div>
-    <div class="navigation_footer">
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT</a>
+    <div class="links">
+      <ul>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
     </div>
-</div>
+  </div>
 <!-- footer ends here -->
 </footer>
 </body>
