--- a/contact.html
+++ b/contact.html
@@ -3,45 +3,55 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title> Home </title>
+    <title> Contact </title>
+
+    <link href="https://fonts.googleapis.com/css?family=Mina|Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 
 <body>
-<header>
-<!-- Navigation starts here -->
-  <div class="navigation_header">
-    <div class="logo">
-      <p class="j_logo"> J </p>
+  <header>
+  <!-- Navigation starts here -->
+    <div class="navigationHeader">
+      <div class="logo">
+        <p class="j_logo"> J </p>
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="index.html">PORTFOLIO</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="links">
-      <a href="portfolio.html">PORTFOLIO</a>
-      <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
-    </div>
-<!-- Navigation ends here -->
-</header>
+  <!-- Navigation ends here -->
+  </header>
 
-<main>
+<main id="contact">
   <h1>Jasper Cussac</h1>
-    
-  </form>
+  <ul>
+    <li>Based in Philadelphia, US</li>
+    <li><a href="mailto:jasper.cussac@gmail.com?Subject=Hello%20again" target="_top">jasper.cussac@gmail.com</a></li>
+  </ul>
+  <p>Jasper Cussac does work in interactive and graphic design. I focus greatly upon usability, with a strong emphasize on user experience. However, I do not negate the importance of visual design in creating a ful immersive experience. Feel free to contact me through the email address listed above for any inquiries.</p>
 </main>
 
 <footer>
 <!-- footer starts here -->
   <div class="footer">
-    <div class="footer_logo">
-      <h1>JasperCussac</h1>
-      <p>jasper.cussac@gmail.com</p>
+    <div class="footerTop">
+      <h3>Jasper<b>Cussac</b></h3>
+      <a href="mailto:jasper.cussac@gmail.com?Subject=Hello%20again" target="_top">jasper.cussac@gmail.com</a>
     </div>
-    <div class="navigation_footer">
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT</a>
+    <div class="footerLinks">
+      <ul>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
     </div>
-</div>
+  </div>
 <!-- footer ends here -->
 </footer>
 </body>
