--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
 <!-- Navigation ends here -->
 </header>
 
-<main>
+<main id="portfolioMain">
 <!-- Portfolio sections start here -->
   <div class="wrapper" id="rembrandt">
     <div class="portfolioHeading">
       <h1> The OLD MASTERS: REMBRANDT </h1>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Alongside his fellow painter Johannes Vermeer, Rembrandt is considered the Grand Master of the Dutch Golden Age. This reproduction is based on a study of Rembrandt's masterful handwork, expressed especially in his explorations in the art of printmaking. In the style of the Old Master, a portrait of the Cuban leader Fidel Castro was made.</p>
     </div>
     <div class="portfolioImages">
-      <img srcset="assets/rembrandt_wide.jpg 960px, assets/rembrandt_tablet.jpg 768px, assets/rembrandt_mobile.jpg 320px" src="assets/rembrandt.jpg" alt="Rembrandt self-portrait reproduction drawing">
-      <img srcset="assets/fidelcastro.jpg 960px, assets/fidelcastro_tablet.jpg 768px, assets/rembrandt_mobile.jpg 320px" src="assets/fidelcastro.jpg" alt="Fidel Castoo drawing in the style of Rembrandt">
+      <img srcset="assets/rembrandt_wide.jpg 960w, assets/rembrandt_tablet.jpg 768w, assets/rembrandt_mobile.jpg 320w" src="assets/rembrandt.jpg" alt="Rembrandt self-portrait reproduction drawing">
+      <img srcset="assets/fidelcastro_wide.jpg 960w, assets/fidelcastro_tablet.jpg 768w, assets/rembrandt_mobile.jpg 320w" src="assets/fidelcastro.jpg" alt="Fidel Castoo drawing in the style of Rembrandt">
     </div>
   </div>
 
   <div class="wrapper" id="graffitiTree">
     <div class="portfolioHeading">
       <h1> EXPLORATION OF URBAN AND NATURAL </h1>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <p> A collage made of object photos digitally, this poster attempts to contrast the natural and the urbanized world. Merging both a marks from the natual world, a tree, and an art form who's creation is due </p>
     </div>
     <div class="portfolioImages">
-      <img srcset="assets/graffititree_wide.jpg 960px, assets/graffititree_tablet.jpg 768px, assets/graffititree.jpg 320px" src="assets/graffititree.jpg" alt="Graffit tree collage" >
+      <img srcset="assets/graffititree_wide.jpg 960w, assets/graffititree_tablet.jpg 768w, assets/graffititree.jpg 320w" src="assets/graffititree.jpg" alt="Graffit tree collage" >
     </div>
   </div>
 
@@ -56,8 +56,8 @@
       <h2><i>The Stranger</i>, Albert Camus<br><i>Rule of the Bone</i>, Russell Banks</h2>
     </div>
     <div class="portfolioImages">
-      <img srcset="assets/ruleofthebone_wide.jpg 960px, assets/ruleofthebone_tablet.jpg 768px, assets/ruleofthebone_mobile 320px" src="assets/ruleofthebone.jpg" alt="Rule of the Bone, Russell Banks, front cover">
-      <img srcset="assets/thestranger_wide.jpg 960px, assets/thestranger_tablet.jpg 768px, assets/thestranger_mobile.jpg" src="assets/thestranger.jpg" alt="The Stranger, Alber Camus, front cover">
+      <img srcset="assets/ruleofthebone_wide.jpg 960w, assets/ruleofthebone_tablet.jpg 768w, assets/ruleofthebone_mobile.jpg" src="assets/ruleofthebone.jpg" alt="Rule of the Bone, Russell Banks, front cover">
+      <img srcset="assets/thestranger_wide.jpg 960w, assets/thestranger_tablet.jpg 768w, assets/thestranger_mobile.jpg" src="assets/thestranger.jpg" alt="The Stranger, Alber Camus, front cover">
     </div>
   </div>
 
@@ -67,8 +67,9 @@
       <h2>Jamaica Observer, a redesign</h2>
     </div>
     <div class="portfolioImages">
-      <a href="http://www.jamaicaobserver.com/">www.jamaicaobserver.com</a>
-      <a href="https://preview.uxpin.com/e9f05e40c71d8aaa5d4ee8cc0c57b1629fb95a46">www.preview.uxpin.com</a>
+      <a id="originalJamaicaObserver" href="http://www.jamaicaobserver.com/" target="_blank">www.jamaicaobserver.com</a>
+      <a id="redesignJamaicaObserver" href="https://preview.uxpin.com/e9f05e40c71d8aaa5d4ee8cc0c57b1629fb95a46" target="_blank">www.preview.uxpin.com</a>
+      <img src="assets/jamaicaobserver.png" alt="Jamaica Observer redesign prototype">
     </div>
   </div>
 <!-- Portfolio sections end here -->
@@ -79,9 +80,9 @@
   <div class="footer">
     <div class="footerTop">
       <h3>Jasper<b>Cussac</b></h3>
-      <p>jasper.cussac@gmail.com</p>
+      <a href="mailto:jasper.cussac@gmail.com?Subject=Hello%20again" target="_top">jasper.cussac@gmail.com</a>
     </div>
-    <div class="links">
+    <div class="footerLinks">
       <ul>
         <li><a href="portfolio.html">PORTFOLIO</a></li>
         <li><a href="about.html">ABOUT</a></li>
